footer fixed no overlap

--- a/group-7-gfrecipes-react-project/src/About/About.css
+++ b/group-7-gfrecipes-react-project/src/About/About.css
@@ -8,16 +8,16 @@ body {
   font-family: "Bebas Neue", cursive;
   font-size: 55px;
   text-align: center;
-  padding-top: 10px;
-  padding-bottom: 25px;
+  padding-top: 30px;
+  padding-bottom: 5px;
 }
 
 .circle {
   background-color: #f8d2cf;
   display: block;
   margin: 0 auto;
-  width: 700px;
-  height: 700px;
+  width: 650px;
+  height: 650px;
   bottom: 250px;
   top: 250px;
   border-radius: 50%;
