--- a/group-7-gfrecipes-react-project/src/Home/Home.css
+++ b/group-7-gfrecipes-react-project/src/Home/Home.css
@@ -1,5 +1,7 @@
 body {
   background-color: #f8f6f6;
+  position: relative;
+  height: 100%;
 }
 
 .gluten-title {
@@ -8,4 +10,9 @@ body {
   font-size: 65px;
   margin: 0 auto;
   padding-top: 70px;
+}
+
+.container{
+  text-align: center;
+  margin-bottom: 0px;
 }
